--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,3 @@
 spring.application.name=calendar
 
-# mysql connection
-spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=0000
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.profiles.active = mongodb
