refactor : .env 파일로 민감 정보 관리

--- a/src/main/resources/application-mongodb.properties
+++ b/src/main/resources/application-mongodb.properties
@@ -1,3 +1,5 @@
 spring.application.name=calendar
 
-spring.data.mongodb.uri=mongodb+srv://dbUser:0000@mycluster.4fcdp.mongodb.net/Interview_Schedule?retryWrites=true&w=majority&appName=MyCluster
+spring.config.import=optional:file:.env[.properties]
+
+spring.data.mongodb.uri=mongodb+srv://${DB_USERNAME}:${DB_PASSWORD}@${CLUSTER}.4fcdp.mongodb.net/${DATABASE}?retryWrites=true&w=majority&appName=${APPNAME}
