style : .env 환경변수명 MONGODB_ 로 통일

--- a/src/main/resources/application-mongodb.properties
+++ b/src/main/resources/application-mongodb.properties
@@ -2,4 +2,4 @@ spring.application.name=calendar
 
 spring.config.import=optional:file:.env[.properties]
 
-spring.data.mongodb.uri=mongodb+srv://${DB_USERNAME}:${DB_PASSWORD}@${CLUSTER}.4fcdp.mongodb.net/${DATABASE}?retryWrites=true&w=majority&appName=${APPNAME}
+spring.data.mongodb.uri=mongodb+srv://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@${MONGODB_CLUSTER}.4fcdp.mongodb.net/${MONGODB_DATABASE}?retryWrites=true&w=majority&appName=${MONGODB_APPNAME}
